--- a/blog.html
+++ b/blog.html
@@ -118,7 +118,7 @@
               height: 500px;
               border: 3px solid black;"
             >
-            <img src="assets/img/high/c.png" width="20%" height="35%" alt="..."
+            <img src="assets/img/high/c.PNG" width="20%" height="35%" alt="..."
                  style="
                   position: absolute;
                   top: 20%;
