--- a/blog.html
+++ b/blog.html
@@ -241,8 +241,8 @@
                                target="_blank"><i class="bx bxl-instagram"></i></a>
                             <!--                            <a href="https://www.linkedin.com/in/ccommit-5680b6204/" class="linkedin" target="_blank"><i-->
                             <!--                                    class="bx bxl-linkedin"></i></a>-->
-                            <!--                            <a href="https://www.youtube.com/@ccommit9983" class="youtube" target="_blank"><i-->
-                            <!--                                    class="bx bxl-youtube"></i></a>-->
+                            <a href="https://www.youtube.com/@ccommit9983" class="youtube" target="_blank"><i
+                                    class="bx bxl-youtube"></i></a>
                         </div>
                     </div>
                 </div>
