--- a/blog.html
+++ b/blog.html
@@ -121,14 +121,14 @@
             <img src="assets/img/high/ccc.png" width="30%" height="300" alt="..."
                  style="
                width: 100%;
-              height: 500px;
+              height: 470px;
               border: 3px solid black;"
             >
             <img src="assets/img/high/c.PNG" width="20%" height="35%" alt="..."
                  style="
                   position: absolute;
-                  top: 20%;
-                  left: 62%;
+                  top: 18%;
+                  left: 63.2%;
               border: 3px solid black;"
             >
             <div class="section-title"
@@ -136,9 +136,10 @@
                     text-align: left;
                     position: absolute;
                     top: 25%;
-                    left: 10%;">
-                <p style="color:white;padding-top:30px;">CCOMMIT BLOG</p>
-                <h5 style="color:white;font-size: 14px; padding-top 40px; ">현직 개발자들의 지식을 공유합니다</h5>
+                    left: 13%;">
+                <p style="color:white;padding-top:35px;">CCOMMIT BLOG</p>
+                <h5 style="color:white;font-size:14px;padding-top:10px;padding-left:3px;">
+                    현직 개발자들의 지식을 공유합니다</h5>
 
             </div>
         </div>
