--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                             aria-label="Slide 3"></button>
                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3"
                             aria-label="Slide 4"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4"
-                            aria-label="Slide 5"></button>
+<!--                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4"-->
+<!--                            aria-label="Slide 5"></button>-->
                 </div>
                 <div class="carousel-inner mt-1" style="">
                     <div class="carousel-item active" data-bs-interval="4000">
@@ -205,12 +205,12 @@
                             </video>
                         </a>
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <a href="#contact">
-                            <img src="assets/img/banner/4.png" class="d-block w-350  mb-3" alt="..."
-                                 style="height:715px;">
-                        </a>
-                    </div>
+<!--                    <div class="carousel-item" data-bs-interval="2000">-->
+<!--                        <a href="#contact">-->
+<!--                            <img src="assets/img/banner/4.png" class="d-block w-350  mb-3" alt="..."-->
+<!--                                 style="height:715px;">-->
+<!--                        </a>-->
+<!--                    </div>-->
                     <div class="carousel-item" data-bs-interval="2000">
                         <a href="https://www.instagram.com/p/CpIO5WULLWV/" target="_blank">
                             <img src="assets/img/banner/11.png" class="d-block w-250 mb-3" alt="..."
