--- a/index.html
+++ b/index.html
@@ -591,6 +591,20 @@
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
+                            <h4>bookbook</h4>
+                            <p>책을 통한 생각 공유를 통해 사람과 사람을 연결하는 벡엔드 서버</p>
+                            <div class="portfolio-links">
+                                <a href="https://github.com/ccommit/bookbook"
+                                   title="community-server"
+                                   target="_blank"><i class="bx bx-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
+                    <div class="portfolio-wrap">
+                        <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-info">
                             <h4>idolTicketing</h4>
                             <p>인터파크 티켓팅 같은 백엔드 서버</p>
                             <div class="portfolio-links">
@@ -661,7 +675,7 @@
                                 <div class="count-box">
                                     <i class="bi bi-emoji-smile"></i>
                                     <p>멘티 수</p>
-                                    <span data-purecounter-start="0" data-purecounter-end="39"
+                                    <span data-purecounter-start="0" data-purecounter-end="41"
                                           data-purecounter-duration="2" class="purecounter"
                                           style="padding-top:4px;"></span>
 
@@ -672,7 +686,7 @@
                                 <div class="count-box">
                                     <i class="bi bi-journal-richtext"></i>
                                     <p>프로젝트 수</p>
-                                    <span data-purecounter-start="0" data-purecounter-end="6"
+                                    <span data-purecounter-start="0" data-purecounter-end="7"
                                           data-purecounter-duration="2" class="purecounter"
                                           style="padding-top:4px;"></span>
 
