--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                             <hr/>
                             <div class="card-body" style="padding-bottom: 33px;">
                                 <strong style="font-size:2.0em;">500,000원</strong><br>
-                                <span style="color:gray">(주 2회 변경시 + 100,000원)</span>
+                                <span style="color:gray">(주 2회 변경시 + 150,000원)</span>
                             </div>
                             <a class="btn btn-warning" href="#contact" style="font-weight:bold">문의하기</a>
                         </div>
@@ -497,7 +497,7 @@
                             <span style="color:gray">(주2회, 1회:1시간)</span>
                             <hr/>
                             <div class="card-body" style="padding-bottom: 33px;">
-                                <strong style="font-size:2.0em;">1,700,000원</strong> <br>
+                                <strong style="font-size:2.0em;">1,850,000원</strong> <br>
                                 <span style="color:red">(얼리버드 - 100,000원 할인)</span>
                             </div>
                             <a class="btn btn-warning" href="#contact" style="font-weight:bold">문의하기</a>
@@ -509,7 +509,7 @@
                             <span style="color:gray">(주2회, 1회:1시간)</span>
                             <hr/>
                             <div class="card-body" style="padding-bottom: 33px;">
-                                <strong style="font-size:2.0em;">3,300,000원</strong><br>
+                                <strong style="font-size:2.0em;">3,600,000원</strong><br>
                                 <span style="color:red">(얼리버드 - 300,000원 할인)</span>
                             </div>
                             <a class="btn btn-warning" href="#contact" style="font-weight:bold">문의하기</a>
@@ -547,6 +547,20 @@
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
+                            <h4>community-server</h4>
+                            <p>inven 과 같은 커뮤니티 서비스의 벡엔드 서버</p>
+                            <div class="portfolio-links">
+                                <a href="https://github.com/ccommit/community-server"
+                                   title="community-server"
+                                   target="_blank"><i class="bx bx-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-publish">
+                    <div class="portfolio-wrap">
+                        <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-info">
                             <h4>news</h4>
                             <p>네이버 뉴스 서비스의 백엔드 시스템</p>
                             <div class="portfolio-links">
@@ -572,16 +586,15 @@
                 <!--                        </div>-->
                 <!--                    </div>-->
                 <!--                </div>-->
-
                 <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                            <h4>community-server</h4>
-                            <p>inven 과 같은 커뮤니티 서비스의 벡엔드 서버</p>
+                            <h4>fashion-commerce-server</h4>
+                            <p>무신사 같은 패션커머스 주문 서버</p>
                             <div class="portfolio-links">
-                                <a href="https://github.com/ccommit/community-server"
-                                   title="community-server"
+                                <a href="https://github.com/ccommit/fashion-commerce-server"
+                                   title="fashion-commerce-server"
                                    target="_blank"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -595,7 +608,21 @@
                             <p>책을 통한 생각 공유를 통해 사람과 사람을 연결하는 벡엔드 서버</p>
                             <div class="portfolio-links">
                                 <a href="https://github.com/ccommit/bookbook"
-                                   title="community-server"
+                                   title="bookbook"
+                                   target="_blank"><i class="bx bx-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
+                    <div class="portfolio-wrap">
+                        <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-info">
+                            <h4>Auction-server</h4>
+                            <p>옥션 중고 경매 시스템과 같은 경매 서비스 백엔드 서버</p>
+                            <div class="portfolio-links">
+                                <a href="https://github.com/ccommit/Auction-server"
+                                   title="Auction-server"
                                    target="_blank"><i class="bx bx-link"></i></a>
                             </div>
                         </div>
@@ -675,7 +702,7 @@
                                 <div class="count-box">
                                     <i class="bi bi-emoji-smile"></i>
                                     <p>멘티 수</p>
-                                    <span data-purecounter-start="0" data-purecounter-end="41"
+                                    <span data-purecounter-start="0" data-purecounter-end="45"
                                           data-purecounter-duration="2" class="purecounter"
                                           style="padding-top:4px;"></span>
 
@@ -686,7 +713,7 @@
                                 <div class="count-box">
                                     <i class="bi bi-journal-richtext"></i>
                                     <p>프로젝트 수</p>
-                                    <span data-purecounter-start="0" data-purecounter-end="7"
+                                    <span data-purecounter-start="0" data-purecounter-end="8"
                                           data-purecounter-duration="2" class="purecounter"
                                           style="padding-top:4px;"></span>
 
@@ -713,7 +740,7 @@
 
                                 </div>
                             </div>
-                            <span style="text-align:right;">2023년 06월 기준</span>
+                            <span style="text-align:right;">2023년 08월 기준</span>
                         </div>
                     </div><!-- End .content-->
                 </div>
