--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                 <!--                    </div>-->
                 <!--                </div>-->
 
-                <div class="col-lg-4 col-md-6 portfolio-item filter-publish">
+                <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
