--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
 
                                 </div>
                             </div>
-                            <span style="text-align:right;">2023년 08월 기준</span>
+                            <span style="text-align:right;">2023년 09월 기준</span>
                         </div>
                     </div><!-- End .content-->
                 </div>
@@ -915,7 +915,9 @@
                             <hr style="margin:0.5rem"/>
                             <span>- 카카오, 넷마블 등 여러 대기업 최종 합격 </span>
                             <span>- 개발 경력 6년 이상, 수업 경력 2년 이상 </span>
-                            <span>- 각종 개발 단체 경험 및 수상 </span>
+                            <span>- 패스트캠퍼스 대용량 트래픽 강의 (23.09) </span>
+                            <span>- 한국공대 게임공학과 직무산업 특강 (23.07) </span>
+                            <span>- 알고리즘잡스 몰입캠프 특강 (23.06) </span>
                         </div>
                     </div>
                 </div>
