--- a/index.html
+++ b/index.html
@@ -547,6 +547,20 @@
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
+                            <h4>Auction-server</h4>
+                            <p>옥션 중고 경매 시스템과 같은 경매 서비스 백엔드 서버</p>
+                            <div class="portfolio-links">
+                                <a href="https://github.com/ccommit/Auction-server"
+                                   title="Auction-server"
+                                   target="_blank"><i class="bx bx-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-publish">
+                    <div class="portfolio-wrap">
+                        <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-info">
                             <h4>community-server</h4>
                             <p>inven 과 같은 커뮤니티 서비스의 벡엔드 서버</p>
                             <div class="portfolio-links">
@@ -601,20 +615,7 @@
                 <!--                    </div>-->
                 <!--                </div>-->
 
-                <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
-                    <div class="portfolio-wrap">
-                        <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-                        <div class="portfolio-info">
-                            <h4>Auction-server</h4>
-                            <p>옥션 중고 경매 시스템과 같은 경매 서비스 백엔드 서버</p>
-                            <div class="portfolio-links">
-                                <a href="https://github.com/ccommit/Auction-server"
-                                   title="Auction-server"
-                                   target="_blank"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
                 <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
@@ -741,7 +742,7 @@
 
                                 </div>
                             </div>
-                            <span style="text-align:right;">2024년 01월 기준</span>
+                            <span style="text-align:right;">2024년 02월 기준</span>
                         </div>
                     </div><!-- End .content-->
                 </div>
