--- a/blog.html
+++ b/blog.html
@@ -157,7 +157,7 @@
                     top: 7%;
                     left: 10%;">
                 <p style="color:white;padding-top:30px;">CCOMMIT BLOG</p>
-                <h5 style="color:white;font-size: 14px; padding-top 40px; ">현직 개발자들의 지식을 공유합니다</h5>
+                <h5 style="color:white;font-size: 14px; padding-top:40px; ">현직 개발자들의 지식을 공유합니다</h5>
 
             </div>
         </div>
